@@ -47,7 +47,7 @@ SUCH DAMAGE.
 <ul>
   <li><a href="#generalnotes">General notes on running "guest OSes"</a>
   <li><a href="#legacy">Legacy emulation modes</a>
-  <li><a href="#netbsdpmaxinstall">NetBSD/pmax 5.1</a>
+  <li><a href="#netbsdpmaxinstall">NetBSD/pmax 5.1.1</a>
   <li><a href="#netbsdarcinstall">NetBSD/arc 5.0.1</a>
   <li><a href="#netbsdhpcmipsinstall">NetBSD/hpcmips 5.0.2</a>
   <li><a href="#netbsdcobaltinstall">NetBSD/cobalt 5.0.1</a>
@@ -218,11 +218,11 @@ follow these instructions:
 
 </pre>
   <li>Download a NetBSD CD-ROM iso image:<pre>
-	<a href="ftp://ftp.netbsd.org/pub/NetBSD/iso/5.1/pmaxcd-5.1.iso">ftp://ftp.netbsd.org/pub/NetBSD/iso/5.1/pmaxcd-5.1.iso</a>
+	<a href="ftp://ftp.netbsd.org/pub/NetBSD/iso/5.1.1/pmaxcd-5.1.1.iso">ftp://ftp.netbsd.org/pub/NetBSD/iso/5.1.1/pmaxcd-5.1.1.iso</a>
 
 </pre>
   <li>Start the emulator like this:<pre>
-	<b>gxemul -X -e 3max -d nbsd_pmax.img -d b:pmaxcd-5.1.iso</b>
+	<b>gxemul -X -e 3max -d nbsd_pmax.img -d b:pmaxcd-5.1.1.iso</b>
 </pre>
 </ol>
 
